# BSL-Translator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-demo.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Documentation/: signUpUnitTests.html
docs/: training-guide.md
models/: README.md
project/server/: bsl_bridge_integration.py  server.js
scripts/: setup_environment.py
src/: demo_standalone.py  raspberry_pi_main.py
src/bsl_translator/: __init__.py
src/bsl_translator/core/: __init__.py  config.py  gesture_classifier.py  hand_detector.py  word_predictor.py
src/bsl_translator/streaming/: __init__.py  firebase_client.py
src/bsl_translator/utils/: __init__.py  logging_config.py
src/web_server/: package-lock.json  package.json
src/web_server/public/website/: login.html  main.html  signup.html  webpage.html
tests/: __init__.py  test_gesture_classifier.py  test_gesture_tracker.py  test_word_predictor.py
train/: autocorrector.py  collect_images.py  create_dataset.py  inference_classifier.py  train_classifier.py
