[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsl-translator"
version = "1.0.0"
description = "Real-time British Sign Language fingerspelling translator using MediaPipe and scikit-learn"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lewis Cornelius", email = "lewis@example.com"}
]
keywords = ["bsl", "sign-language", "computer-vision", "mediapipe", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
firebase = [
    "firebase-admin>=6.0.0",
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
bsl-demo = "demo_standalone:main"

[project.urls]
Homepage = "https://github.com/Lewis-Cornelius/BSL-Translator"
Repository = "https://github.com/Lewis-Cornelius/BSL-Translator"
Issues = "https://github.com/Lewis-Cornelius/BSL-Translator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.pkl", "*.p"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | node_modules
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
